tests/cpp/internal/negative_case/bad_rvalue_ref_param_lvalue.cpp
// Phase 1 negative: rvalue reference parameter rejects lvalue argument.
void consume(int&& val) {}

int main() {
  int x = 42;
  consume(x);
  return 0;
}
